# flowlog-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/datalog/: config.toml  highlights.scm  outline.scm
server/: Cargo.toml
server/src/: analyze.rs  flowlog.pest  main.rs  symbols.rs
src/: lib.rs
