[package]
name = "flowlog-lsp"
version = "0.1.0"
edition = "2021"
description = "Language server for FlowLog / Datalog (.dl): diagnostics via flowlog-build, symbols via FlowLog's own pest grammar"
license = "Apache-2.0"
repository = "https://github.com/gurdasnijor/flowlog-zed"

[[bin]]
name = "flowlog-lsp"
path = "src/main.rs"

[dependencies]
flowlog-build = "0.3"
codespan-reporting = "0.13"
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2"
pest_derive = "2"

# Isolate from the parent Zed-extension crate so `cargo build` here does not
# get swept into the wasm extension build (and vice-versa).
[workspace]
